test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/conflicting1.build
defaults(
	example.echo
	Input: abc
)
